# tsbyq-workshop-2025

./: ECM_CHAT_SETUP.md  IMAGE_FIX_SUMMARY.md  MULTI_PDF_MANAGEMENT.md  README.md  index.html  package-lock.json  package.json
assets/: ArrowBack-D29OELox.js  Close--BKzVsQi.js  Close--kVMnMAY.js  Close-8RrNxg_W.js  Close-Bzy1w7FN.js  Close-CbTmOb8-.js  Close-D2U2iVm4.js  Close-DJWBNKmJ.js  Close-Dq1nMesJ.js  Close-DwG00x81.js  Close-n0OcuP1k.js  ContextProvider-8-ENsgXB.js  ContextProvider-93zoq8H1.js  ContextProvider-BFqKddgk.js  ContextProvider-BhreIfzN.js  ContextProvider-BiqS4VDD.js  ContextProvider-BmfkV3DG.js  ContextProvider-BqJ4Ppxp.js  ContextProvider-Bt4C7sTD.js  ContextProvider-ByPrKYli.js  ContextProvider-CFKuKNJv.js  ContextProvider-CI5TB3DM.js  ContextProvider-CfQJtGc_.js  ContextProvider-CpbTM5PM.js  ContextProvider-DDQt4tvm.js  ContextProvider-DKlVD_Ck.js  ContextProvider-DqvvdRf_.js  ContextProvider-KqqvZxEj.js  ContextProvider-bMirXePk.js  ContextProvider-fH5TAPI-.js  ContextProvider-trswdSQv.js  DataFilesPanel-BTBUT-sV.js  DataFilesPanel-BmsU4nkH.js  DataFilesPanel-BnYzA1pu.js  DataFilesPanel-CLPcbC38.js  DataFilesPanel-CcOrA_Kd.js  DataFilesPanel-CyoPuH9P.js  DataFilesPanel-DSzYjYiO.js  (+317 more)
backend/: .env.example  DATABASE.md  README.md  UPLOAD_STRUCTURE.md  config.py  config.yaml  database.py  db_models.py  ecm_extractor.db  init_db.py  main.py  pyproject.toml  requirements.txt  start.sh
backend/ecm_extraction/: __init__.py  extractor.py  llm_client.py  llm_clients.py  models.py  pdf_parser.py
backend/notebooks/: test_llm.ipynb
docs/: 404.html  (+1 more)
(+60 files in other folders)
