[project]
name = "ecm-extractor-backend"
version = "0.1.0"
description = "FastAPI backend for extracting Energy Conservation Measures from building audit reports"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "pydantic>=2.10.3",
    "python-multipart>=0.0.20",
    "PyMuPDF>=1.25.1",
    "PyYAML>=6.0.1",
    "requests>=2.32.3",
    "tiktoken>=0.8.0",
    "python-dotenv>=1.0.1",
    "sqlalchemy>=2.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "httpx>=0.27.0",
    "ipykernel>=6.29.0",
    "jupyter>=1.0.0",
    "notebook>=7.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["ecm_extraction"]
